# baywatch

./: Cargo.toml  PKGBUILD  README.md  baywatch.install  baywatch.service  config.example.yaml  flake.nix
.github/workflows/: release.yml
pkg/deb/: postinst
src/: config.rs  main.rs  proxy.rs  service.rs
