[package]
name = "baywatch"
version = "0.1.1"
edition = "2024"
description = "Lazy-loading reverse proxy daemon that spins up services on demand"
authors = ["bjesus <github@yoavmoshe.com>"]
license = "MIT"
repository = "https://github.com/bjesus/baywatch"
homepage = "https://github.com/bjesus/baywatch"
keywords = ["reverse-proxy", "daemon", "lazy-loading", "development"]
categories = ["command-line-utilities", "network-programming", "web-programming"]
readme = "README.md"

[package.metadata.deb]
maintainer = "bjesus <github@yoavmoshe.com>"
section = "net"
priority = "optional"
assets = [
  ["target/release/baywatch", "usr/bin/", "755"],
  ["baywatch.service", "usr/lib/systemd/user/", "644"],
  ["config.example.yaml", "usr/share/doc/baywatch/", "644"],
]
maintainer-scripts = "pkg/deb/"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server + client
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2", "server", "client-legacy"] }
http-body-util = "0.1"
bytes = "1"

# WebSocket
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# XDG directories
dirs = "6"

# Shell expansion
shellexpand = "3"

# Error handling
anyhow = "1"

# Unix process management
libc = "0.2"
